Bug 1009020 - Use a fixed epsilon when nudging the transform to integers in ChooseScaleAndSetTransform. r=roc